...
          // Powered By
          const Align(
            alignment: Alignment.centerLeft,
            child: Padding(
              padding: EdgeInsets.only(left: 4, bottom: 8),
              child: Text(
                'POWERED BY',
                style: TextStyle(
                  color: AppTheme.spotifySubtle,
                  fontSize: 11,
                  fontWeight: FontWeight.w700,
                  letterSpacing: 2,
                ),
...
